data/derived/comb/progs/unify/prog3093.ml.out
Characters 47-48:
  else [n.[0]];;
        ^
Error: This expression has type int but an expression was expected of type
         string
